...
          ),
        }}
      />
      <Tabs.Screen
        name="stations"
        options={{
          title: 'Estaciones',
          tabBarIcon: ({ color }) => <FontAwesome6 name="water" size={20} color={color} />,
        }}
      />
      <Tabs.Screen
        name="captures"
        options={{
...
